5MLRE: Collaborative filtering : Added the filtered dataset

--- a/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
+++ b/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
@@ -719,6 +719,314 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## E - Collaborative filtering: filtered training\n",
+    "We will now run our previous experiment again, but this time using a filtered dataset.\n",
+    "\n",
+    "### E.1 - Filtering the dataset\n",
+    "We only keep users with at least two hundred ratings and items with at least two hundred ratings."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "        user_id anime_id  rating\n302           5        6       8\n303           5       15       6\n304           5       17       6\n305           5       18       6\n306           5       20       6\n...         ...      ...     ...\n7813330   73507     8231       5\n7813331   73507     8348       5\n7813332   73507     8440       7\n7813333   73507     8769       8\n7813334   73507    10067       5\n\n[3949311 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>user_id</th>\n      <th>anime_id</th>\n      <th>rating</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>302</th>\n      <td>5</td>\n      <td>6</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>303</th>\n      <td>5</td>\n      <td>15</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>304</th>\n      <td>5</td>\n      <td>17</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>305</th>\n      <td>5</td>\n      <td>18</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>306</th>\n      <td>5</td>\n      <td>20</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>7813330</th>\n      <td>73507</td>\n      <td>8231</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>7813331</th>\n      <td>73507</td>\n      <td>8348</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>7813332</th>\n      <td>73507</td>\n      <td>8440</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>7813333</th>\n      <td>73507</td>\n      <td>8769</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>7813334</th>\n      <td>73507</td>\n      <td>10067</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n<p>3949311 rows × 3 columns</p>\n</div>"
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_filtered = pandas.read_csv((DATA_FOLDER / \"rating.csv\"), dtype={\"user_id\": str, \"anime_id\": str})\n",
+    "\n",
+    "# Calculate the data filters\n",
+    "ratings_per_users = data_filtered.value_counts(subset=\"user_id\").reset_index(name=\"count\")\n",
+    "ratings_per_anime = data_filtered.value_counts(subset=\"anime_id\").reset_index(name=\"count\")\n",
+    "\n",
+    "# Apply the filters\n",
+    "min_n_ratings = 200\n",
+    "data_filtered = data_filtered[data_filtered[\"user_id\"].isin(ratings_per_users[ratings_per_users[\"count\"] > min_n_ratings][\"user_id\"])]\n",
+    "data_filtered = data_filtered[data_filtered[\"anime_id\"].isin(ratings_per_anime[ratings_per_anime[\"count\"] > min_n_ratings][\"anime_id\"])]\n",
+    "\n",
+    "# Save the file\n",
+    "data_filtered.to_csv((DATA_FOLDER / \"rating_filtered_min_rating_200.csv\"), index=False, mode=\"w\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can now load the filtered dataset."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "data_filtered = pandas.read_csv((DATA_FOLDER / \"rating_filtered_min_rating_200.csv\"), dtype={\"user_id\": str, \"anime_id\": str})\n",
+    "data_filtered = data_filtered.sample(n=100_000)\n",
+    "\n",
+    "data_reader = surprise.Reader(rating_scale=(-1, 10))\n",
+    "data_filtered = surprise.Dataset.load_from_df(df=data_filtered[[\"user_id\", \"anime_id\", \"rating\"]], reader=data_reader)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "And we initialize a new evaluator."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "evaluator_filtered = helpers.ml.ModelEvaluator(dataset=data_filtered, rankings=rankings, models_folder=MODELS_FOLDER, seed=RANDOM_STATE)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We will now redefine our previous model and train them a second time with this new dataset.\n",
+    "\n",
+    "### E.2 - Slope One"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "evaluator_filtered.run_model(name=\"Slope One - Filtered\", model=surprise.SlopeOne, hyper_params=None, measure_key=\"rmse\", override=False)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### E.3 - KNN Basic"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "evaluator_filtered.run_model(\n",
+    "    name=\"KNN Basic - Filtered\",\n",
+    "    model=surprise.KNNBasic,\n",
+    "    hyper_params={\n",
+    "        \"k\": [20, 40, 60],\n",
+    "        \"min_k\": [1, 2, 3, 5],\n",
+    "        \"sim_options\": {\n",
+    "            \"name\": [\"cosine\", \"msd\", \"pearson\", \"pearson_baseline\"],\n",
+    "            \"user_based\": [True, False]\n",
+    "        }\n",
+    "    },\n",
+    "    measure_key=\"rmse\",\n",
+    "    override=False\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### E.4 - KNN With Means"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "evaluator_filtered.run_model(\n",
+    "    name=\"KNN With Means - Filtered\",\n",
+    "    model=surprise.KNNWithMeans,\n",
+    "    hyper_params={\n",
+    "        \"k\": [20, 40, 60],\n",
+    "        \"min_k\": [1, 2, 3, 5],\n",
+    "        \"sim_options\": {\n",
+    "            \"name\": [\"cosine\", \"msd\", \"pearson\", \"pearson_baseline\"],\n",
+    "            \"user_based\": [True, False]\n",
+    "        }\n",
+    "    },\n",
+    "    measure_key=\"rmse\",\n",
+    "    override=False\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### E.5 - KNN With Z-Score"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "evaluator_filtered.run_model(\n",
+    "    name=\"KNN With Z-Score - Filtered\",\n",
+    "    model=surprise.KNNWithZScore,\n",
+    "    hyper_params={\n",
+    "        \"k\": [20, 40, 60],\n",
+    "        \"min_k\": [1, 2, 3, 5],\n",
+    "        \"sim_options\": {\n",
+    "            \"name\": [\"cosine\", \"msd\", \"pearson\", \"pearson_baseline\"],\n",
+    "            \"user_based\": [True, False]\n",
+    "        }\n",
+    "    },\n",
+    "    measure_key=\"rmse\",\n",
+    "    override=False\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### E.6 - KNN Baseline"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "evaluator_filtered.run_model(\n",
+    "    name=\"KNN Baseline - Filtered\",\n",
+    "    model=surprise.KNNBaseline,\n",
+    "    hyper_params={\n",
+    "        \"k\": [20, 40, 60],\n",
+    "        \"min_k\": [1, 2, 3, 5],\n",
+    "        \"sim_options\": {\n",
+    "            \"name\": [\"cosine\", \"msd\", \"pearson\", \"pearson_baseline\"],\n",
+    "            \"user_based\": [True, False]\n",
+    "        },\n",
+    "        \"bsl_options\": {\n",
+    "            \"method\": [\"als\"],\n",
+    "            \"n_epochs\": [5, 10, 15],\n",
+    "        }\n",
+    "    },\n",
+    "    measure_key=\"rmse\",\n",
+    "    override=False\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### E.7 - Non-negative Matrix Factorization"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "evaluator_filtered.run_model(\n",
+    "    name=\"Non-negative Matrix Factorization - Filtered\",\n",
+    "    model=surprise.NMF,\n",
+    "    hyper_params={\n",
+    "        \"n_factors\": [5, 15, 25],\n",
+    "        \"n_epochs\": [25, 50, 75],\n",
+    "        \"biased\": [True, False]\n",
+    "    },\n",
+    "    measure_key=\"rmse\",\n",
+    "    override=False\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### E.8 - Co-clustering"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "evaluator_filtered.run_model(\n",
+    "    name=\"Co-clustering - Filtered\",\n",
+    "    model=surprise.CoClustering,\n",
+    "    hyper_params={\n",
+    "        \"n_cltr_u\": [1, 3, 5],\n",
+    "        \"n_cltr_i\": [1, 3, 5],\n",
+    "        \"n_epochs\": [10, 20, 30],\n",
+    "    },\n",
+    "    measure_key=\"rmse\",\n",
+    "    override=False\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## D - Getting the Top-N\n",
