--- a/5MLRE/Project/notebooks/en/1-Data_analysis.ipynb
+++ b/5MLRE/Project/notebooks/en/1-Data_analysis.ipynb
@@ -1237,12 +1237,29 @@
    "cell_type": "markdown",
    "source": [
     "## E - Conclusion of the data analysis\n",
-    "**TODO: Add text**"
+    "The analysis of the datasets allows us to observe several things. The data is nearly complete and contain only one duplicate.\n",
+    "However, some data is missing in one of the datasets.\n",
+    "\n",
+    "After some calculations and column addition, the graphs showed us very interesting results such as outliers or some unbalanced but clean data between columns and rows.\n",
+    "\n",
+    "In the next notebook, we will discuss the collaborative filtering to train our models with the formatted data accomplished in this notebook."
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
