5MLRE: Collaborative filtering : Removed useless parameter

--- a/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
+++ b/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
@@ -1352,7 +1352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_top_n_of(user_id: int, top_n: dict[int, list], items_df: pandas.DataFrame, auto_print: bool = False) -> pandas.DataFrame:\n",
+    "def get_top_n_of(user_id: int, top_n: dict[int, list], items_df: pandas.DataFrame) -> pandas.DataFrame:\n",
     "    \"\"\" Returns the formatted top-N recommendation for a specific user. \"\"\"\n",
     "    user_top = []\n",
     "\n",
@@ -1393,7 +1393,7 @@
    ],
    "source": [
     "print(f\"{Style.BRIGHT}Top-N: unfiltered dataset{Style.RESET_ALL}\")\n",
-    "get_top_n_of(user_id=random_user_id, top_n=top_n_knn_baseline, items_df=data_anime, auto_print=False)"
+    "get_top_n_of(user_id=random_user_id, top_n=top_n_knn_baseline, items_df=data_anime)"
    ]
   },
   {
@@ -1422,7 +1422,7 @@
    ],
    "source": [
     "print(f\"{Style.BRIGHT}Top-N: filtered dataset{Style.RESET_ALL}\")\n",
-    "get_top_n_of(user_id=random_user_id, top_n=top_n_filtered_knn_baseline, items_df=data_anime, auto_print=False)"
+    "get_top_n_of(user_id=random_user_id, top_n=top_n_filtered_knn_baseline, items_df=data_anime)"
    ],
    "metadata": {
     "collapsed": false
