5MLRE: Content-based filtering : Typo fix

--- a/5MLRE/Project/notebooks/en/3-Content-Based_filtering.ipynb
+++ b/5MLRE/Project/notebooks/en/3-Content-Based_filtering.ipynb
@@ -26,8 +26,7 @@
    "cell_type": "markdown",
    "source": [
     "# 3 - Content-based filtering\n",
-    "**TODO: In the previous notebook...**\n",
-    "Content-based filtering uses item features to recommend other items to what the user likes. In our case, we use a user's previous ratings and try to suggest items that are similar to the animes he rated the highest.\n",
+    "In the previous notebook, we tested different collaborative filtering models, and we saw that they had very bad scores. We will now try another filtering technique. Content-based filtering uses item features to recommend other items to what the user likes. In our case, we use a user's previous ratings and try to suggest items that are similar to the animes he rated the highest.\n",
     "\n",
     "### Index\n",
     "<ol type=\"A\">\n",
@@ -57,8 +56,6 @@
    "outputs": [],
    "source": [
     "# OS and filesystem\n",
-    "import os\n",
-    "import sys\n",
     "from pathlib import Path\n",
     "\n",
     "# Math\n",
@@ -79,11 +76,7 @@
     "from colorama import Fore\n",
     "\n",
     "# Misc.\n",
-    "from ast import literal_eval\n",
-    "\n",
-    "# Local files\n",
-    "sys.path.append(os.path.join(os.pardir, os.pardir))\n",
-    "import helpers"
+    "from ast import literal_eval"
    ],
    "metadata": {
     "collapsed": false
@@ -171,7 +164,7 @@
     "For this technique to work, we must first translate some values to a format that can be interpreted by the model. In this section, we will go through the preparation of the data and explain why we do this. These transformations were not done in the first pre-processing, as some transformations make the data less usable with the plotting libraries (e.g. one-hot encoding)\n",
     "\n",
     "### B.1 - Filtering out some columns\n",
-    "We start the preparation by filtering out some of the columns that are not used in the research of similarities such as identifiers, ranks, ... Usually, we would keep the name of the anime as it constitute the `y`, the labels that we want to predict. But in this case, it is simple a research of close items, and the name doesn't have a purpose in this situation."
+    "We start the preparation by filtering out some of the columns that are not used in the research of similarities such as identifiers, ranks, ... Usually, we would keep the name of the anime as it constitute the `y`, the labels that we want to predict. But in this case, it is simple research of close items, and the name doesn't have a purpose in this situation."
    ],
    "metadata": {
     "collapsed": false
@@ -406,7 +399,7 @@
    "cell_type": "markdown",
    "source": [
     "## C - The \"Nearest Neighbors\" model\n",
-    "In this section, we will define a model that will gives ten close items for each anime in the dataset.\n",
+    "In this section, we will define a model that will give ten close items for each anime in the dataset.\n",
     "\n",
     "### C.1 - Model definition and similarities computation\n",
     "From the [sklearn docs](https://scikit-learn.org/stable/modules/neighbors.html), [NearestNeighbors](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.NearestNeighbors.html#sklearn.neighbors.NearestNeighbors) implements unsupervised nearest neighbors learning. It acts as a uniform interface to three different nearest neighbors algorithms: [BallTree](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.BallTree.html#sklearn.neighbors.BallTree), [KDTree](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KDTree.html#sklearn.neighbors.KDTree), and a brute-force algorithm based on routines in `sklearn.metrics.pairwise`. When the algorithm is set to `\"auto\"`, the module attempts to determine the best `algorithm` from the training data."
@@ -463,7 +456,7 @@
    "cell_type": "markdown",
    "source": [
     "### C.2 - Getting the Top-N\n",
-    "We normally don't need the ratings dataset. But in our case, we want to get the top ten of a user using his identifier."
+    "We normally don't need the rating dataset. But in our case, we want to get the top ten of a user using his identifier."
    ],
    "metadata": {
     "collapsed": false
@@ -594,7 +587,9 @@
    "cell_type": "markdown",
    "source": [
     "## D - Conclusion of the content-based filtering\n",
-    "**TODO: Add text**"
+    "This type of filtering showed us better result than in the previous notebook. This system is able to recommend a bunch of anime to a user based on those he already watched.\n",
+    "\n",
+    "The next notebook is the appendix. It contains the list of sources used in our research and the questions from the school subject."
    ],
    "metadata": {
     "collapsed": false
