5MLRE: Collaborative filtering: Typo

--- a/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
+++ b/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
@@ -32,6 +32,7 @@
     "  <li>Notebook initialization</li>\n",
     "  <li>Collaborative filtering: unfiltered training</li>\n",
     "  <li>Collaborative filtering: filtered training</li>\n",
+    "  <li>Why are the results so low?</li>\n",
     "  <li>Getting the Top-N</li>\n",
     "  <li>Conclusion of the collaborative filtering</li>\n",
     "</ol>"
@@ -1311,7 +1312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## D - Getting the Top-N\n",
+    "## E - Getting the Top-N\n",
     "The final step is to display the top-N of a user. We start by loading the previously saved top of our best model. To compare a bit more our models, we will take the two best of the unfiltered and the filtered dataset."
    ]
   },
@@ -1418,7 +1419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## E - Conclusion of the collaborative filtering\n",
+    "## F - Conclusion of the collaborative filtering\n",
     "In spite of our various tests, we did not manage to produce a satisfactory recommendation system using collaborative filtering.\n",
     "\n",
     "In the next notebook, we will discuss another type of recommendation system: content-based filtering."
