Data quality tests notebook

--- a/5MLDE/Project/jupyter-server/notebooks/en/2-Data_quality_tests.ipynb
+++ b/5MLDE/Project/jupyter-server/notebooks/en/2-Data_quality_tests.ipynb
@@ -113,7 +113,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## D - Conclusion ?\n",
+    "## D - Conclusion\n",
     "\n",
     "The next notebook is the appendix."
    ],
