5MLRE: Typo fix

--- a/5MLDE/Project/jupyter-server/notebooks/en/2-Data_quality_tests.ipynb
+++ b/5MLDE/Project/jupyter-server/notebooks/en/2-Data_quality_tests.ipynb
@@ -25,14 +25,14 @@
    "cell_type": "markdown",
    "source": [
     "# 2 - Data quality tests\n",
-    "The purpose of this first notebook will be to explain how to setup the Great Expectations base and configuration to obtain the results available in the /config/great_expectations folder.\n",
+    "The purpose of this notebook will be to explain how to set up Great Expectations and configure it. The configuration is stored in the `jupyter-server/config/great_expectations` folder.\n",
     "\n",
     "### Index\n",
     "<ol type=\"A\">\n",
-    "  <li>Initialization of the Great Expectation base</li>\n",
-    "  <li>Datasource creation and configuration</li>\n",
-    "  <li>Expectations Suite creation and configuration</li>\n",
-    "  <li>Conclusion</li>\n",
+    "  <li>Initialization of Great Expectation</li>\n",
+    "  <li>The Datasource</li>\n",
+    "  <li>The Expectations Suite</li>\n",
+    "  <li>Conclusion of the data quality tests</li>\n",
     "</ol>"
    ],
    "metadata": {
@@ -42,13 +42,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## A - Initialization of the Great Expectation base\n",
+    "## A - Initialization of Great Expectation\n",
+    "We will initialize Great Expectations (GX) in the `jupyter-server/config` folder with this command:\n",
     "\n",
-    "In the jupyter-server/config folder, we will initiate the Great Expectations (GX) project base with this command :\n",
-    "\n",
-    "`great_expectations init`\n",
-    "\n",
-    "Then, just press enter."
+    "```\n",
+    "great_expectations init\n",
+    "```"
    ],
    "metadata": {
     "collapsed": false
@@ -57,16 +56,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## B - Datasource creation and configuration\n",
+    "## B - The Datasource\n",
+    "We will do most of the remaining work in the newly created folder. We first need a new datasource for GX to work with. We can load our dataset file with this command:\n",
     "\n",
-    "In the newly created folder (named *great_expectations* by default, we will do most of the remaining work.\n",
-    "We need a new datasource for GX to work with. We can load our csv file with this command :\n",
+    "```\n",
+    "great_expectations datasource new\n",
+    "```\n",
     "\n",
-    "`great_expectations datasource new`\n",
-    "\n",
-    "We are processing our data with Pandas, so we will choose \"Files on a filesystem (for processing with Pandas or Spark)\".\n",
-    "On the next prompt, select \"Pandas\".\n",
-    "We are asked to enter the path of our data directory. Since we are working from the jupyter container, the data folder path is \"jupyter-server/data\"."
+    "We choose \"Files on a filesystem (for processing with Pandas or Spark)\" for the first prompt and \"Pandas\" on the second. We are then asked to enter the path to our data folder. Since we are working from the jupyter container, the data folder path is `app/data`. A new notebook named `datasource_new` is then created in the `jupyter-server/config/great_expectations/uncommitted` folder. Open this notebook and change the value `my_datasource` to whatever you want your datasource to be called. In this project, we named it \"android_malware\". Then, execute all cells in the notebook. If there is no problem, the last cell will print the newly created datasource."
    ],
    "metadata": {
     "collapsed": false
@@ -75,36 +72,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "A new notebook will be created in the *uncommitted* folder named \"datasource_new\". Open this notebook and change the value *my_datasource* to whatever you want your datasource to be called. In this project, we named it \"android_malware\". Then, execute all cells in the notebook. If successful, the last cell will print the newly created datasource."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## C - Expectations Suite creation and configuration\n",
+    "## C - The Expectations Suite\n",
+    "The next step is to create the Expectation Suite by doing this command:\n",
     "\n",
-    "Next step is to create the Expectation Suite by doing this command :\n",
-    "`great_expectations suite new`\n",
+    "```\n",
+    "great_expectations suite new\n",
+    "```\n",
     "\n",
-    "We will use a Data Assistant to import our data file to this suite. So we will choose \"Automatically, using a Data Assistant\".\n",
+    "We will use the Data Assistant to import our data file to this suite. At the first prompt, we choose \"Automatically, using a Data Assistant\". Our dataset is now displayed as a choice for our suite. Select it and give a name to the new suite. We named it \"android_malware_suite\". A new notebook named `edit_android_malware_suite` has been created in the `jupyter-server/config/great_expectations/uncommitted` folder.\n",
     "\n",
-    "Our CSV is now displayed as a choice for our suite, select it and give a name to the new suite. For this project, we named it \"android_malware_suite\".\n",
-    "A new notebook is now created in the *uncommitted* folder named \"edit_android_malware_suite\".\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "The previously created notebook need some little tweaks to match our needs.\n",
-    "By default, all the columns of the dataset are excluded in the \"exclude_column_names\" array. We only need the \"Flow ID\" column to be excluded. So we are removing every column from the array except this one.\n",
-    "\n",
-    "Finally, we can execute all cells of the suite notebook. This will generate a Data Docs presenting the expectations results"
+    "The previously created notebook need some tweaks to match our needs. By default, all the columns of the dataset are excluded in the `exclude_column_names` array. We only need the \"Flow ID\" column to be excluded, so we are removing every column from the array except this one. Finally, we can execute all the cells of the suite notebook. This will generate a Data Docs presenting the expectations results"
    ],
    "metadata": {
     "collapsed": false
@@ -114,7 +91,6 @@
    "cell_type": "markdown",
    "source": [
     "## D - Conclusion\n",
-    "\n",
     "The next notebook is the appendix."
    ],
    "metadata": {
