5MLRE: Typo fix

--- a/5MLDE/Project/jupyter-server/notebooks/en/2-Data_quality_tests.ipynb
+++ b/5MLDE/Project/jupyter-server/notebooks/en/2-Data_quality_tests.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "We will use the Data Assistant to import our data file to this suite. At the first prompt, we choose \"Automatically, using a Data Assistant\". Our dataset is now displayed as a choice for our suite. Select it and give a name to the new suite. We named it \"android_malware_suite\". A new notebook named `edit_android_malware_suite` has been created in the `jupyter-server/config/great_expectations/uncommitted` folder.\n",
     "\n",
-    "The previously created notebook need some tweaks to match our needs. By default, all the columns of the dataset are excluded in the `exclude_column_names` array. We only need the \"Flow ID\" column to be excluded, so we are removing every column from the array except this one. Finally, we can execute all the cells of the suite notebook. This will generate a Data Docs presenting the expectations results"
+    "The previously created notebook need some tweaks to match our needs. By default, all the columns of the dataset are excluded in the `exclude_column_names` array. We only need the \"Flow ID\" column to be excluded, so we are removing every column from the array except this one. Finally, we can execute all the cells of the suite notebook. This will generate a Data Docs presenting the expectations results."
    ],
    "metadata": {
     "collapsed": false
