5MLRE: Typo fix

--- a/5MLDE/Project/jupyter-server/notebooks/en/2-Data_quality_tests.ipynb
+++ b/5MLDE/Project/jupyter-server/notebooks/en/2-Data_quality_tests.ipynb
@@ -63,7 +63,7 @@
     "great_expectations datasource new\n",
     "```\n",
     "\n",
-    "We choose \"Files on a filesystem (for processing with Pandas or Spark)\" for the first prompt and \"Pandas\" for the second. We are then asked to enter the path to our data folder. Since we are working from the jupyter container, the data folder path is `app/data`. A new notebook named `datasource_new` is then created in the `jupyter-server/config/great_expectations/uncommitted` folder. Open this notebook and change the value `my_datasource` to whatever you want your datasource to be called. In this project, we named it \"android_malware\". Then, execute all cells in the notebook. If there is no problem, the last cell will print the newly created datasource."
+    "We choose \"Files on a filesystem (for processing with Pandas or Spark)\" for the first prompt and \"Pandas\" for the second. We are then asked to enter the path to our data folder. Since we are working from the jupyter container, the data folder path is `app/data`. A new notebook named `datasource_new` is then created in the `jupyter-server/config/great_expectations/uncommitted` folder. Open this notebook and change the value of `datasource_name` to whatever you want your datasource to be called. In this project, we named it \"android_malware\". Then, execute all cells in the notebook. If there is no problem, the last cell will print the newly created datasource."
    ],
    "metadata": {
     "collapsed": false
