--- a/5MLDE/Project/jupyter-server/notebooks/en/2-Data_quality_tests.ipynb
+++ b/5MLDE/Project/jupyter-server/notebooks/en/2-Data_quality_tests.ipynb
@@ -43,11 +43,18 @@
    "cell_type": "markdown",
    "source": [
     "## A - Initialization of Great Expectation\n",
-    "We will initialize Great Expectations (GX) in the `jupyter-server/config` folder with this command:\n",
-    "\n",
-    "```\n",
-    "great_expectations init\n",
-    "```"
+    "We will initialize Great Expectations (GX) in the `jupyter-server/config` folder with this command:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "great_expectations init"
    ],
    "metadata": {
     "collapsed": false
