--- a/5MLDE/Project/jupyter-server/notebooks/en/2-Data_quality_tests.ipynb
+++ b/5MLDE/Project/jupyter-server/notebooks/en/2-Data_quality_tests.ipynb
@@ -64,12 +64,26 @@
    "cell_type": "markdown",
    "source": [
     "## B - The Datasource\n",
-    "We will do most of the remaining work in the newly created folder. We first need a new datasource for GX to work with. We can load our dataset file with this command:\n",
-    "\n",
-    "```\n",
-    "great_expectations datasource new\n",
-    "```\n",
-    "\n",
+    "We will do most of the remaining work in the newly created folder. We first need a new datasource for GX to work with. We can load our dataset file with this command:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "great_expectations datasource new"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "We choose \"Files on a filesystem (for processing with Pandas or Spark)\" for the first prompt and \"Pandas\" for the second. We are then asked to enter the path to our data folder. Since we are working from the jupyter container, the data folder path is `app/data`. A new notebook named `datasource_new` is then created in the `jupyter-server/config/great_expectations/uncommitted` folder. Open this notebook and change the value of `datasource_name` to whatever you want your datasource to be called. In this project, we named it \"android_malware\". Then, execute all cells in the notebook. If there is no problem, the last cell will print the newly created datasource."
    ],
    "metadata": {
@@ -80,12 +94,26 @@
    "cell_type": "markdown",
    "source": [
     "## C - The Expectations Suite\n",
-    "The next step is to create the Expectation Suite by doing this command:\n",
-    "\n",
-    "```\n",
-    "great_expectations suite new\n",
-    "```\n",
-    "\n",
+    "The next step is to create the Expectation Suite by doing this command:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "great_expectations suite new"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "We will use the Data Assistant to import our data file to this suite. At the first prompt, we choose \"Automatically, using a Data Assistant\". Our dataset is now displayed as a choice for our suite. Select it and give a name to the new suite. We named it \"android_malware_suite\". A new notebook named `edit_android_malware_suite` has been created in the `jupyter-server/config/great_expectations/uncommitted` folder.\n",
     "\n",
     "The previously created notebook need some tweaks to match our needs. By default, all the columns of the dataset are excluded in the `exclude_column_names` array. We only need the \"Flow ID\" column to be excluded, so we are removing every column from the array except this one. Finally, we can execute all the cells of the suite notebook. This will generate a Data Docs presenting the expectations results."
